generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__statement__tests__declaration__enumerated.snap
---
source: generator/javascript/src/transform/statement.rs
expression: ast
---
[
    Variable(
        "foo",
        Object(
            [
                (
                    "Bar",
                    Function(
                        Some(
                            "Bar",
                        ),
                        [
                            "$param_0",
                        ],
                        [
                            Return(
                                Some(
                                    Array(
                                        [
                                            PropertyAccess(
                                                Identifier(
                                                    "foo",
                                                ),
                                                "Bar",
                                            ),
                                            Identifier(
                                                "$param_0",
                                            ),
                                        ],
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
                (
                    "Fizz",
                    Array(
                        [
                            Function(
                                Some(
                                    "Fizz",
                                ),
                                [],
                                [],
                            ),
                        ],
                    ),
                ),
            ],
        ),
    ),
]
