generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__statement__tests__declaration__function.snap
---
source: generator/javascript/src/transform/statement.rs
expression: ast
---
[
    Expression(
        Function(
            Some(
                "foo",
            ),
            [
                "bar",
                "fizz",
            ],
            [
                Assignment(
                    Identifier(
                        "fizz",
                    ),
                    FunctionCall(
                        Identifier(
                            "$knot.util.defaultParameter",
                        ),
                        [
                            Identifier(
                                "fizz",
                            ),
                            Boolean(
                                true,
                            ),
                        ],
                    ),
                ),
                Return(
                    Some(
                        Null,
                    ),
                ),
            ],
        ),
    ),
]
