generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__statement__tests__declaration__function_closure_body.snap
---
source: generator/javascript/src/transform/statement.rs
expression: ast
---
[
    Expression(
        Function(
            Some(
                "foo",
            ),
            [],
            [
                Variable(
                    "bar",
                    Null,
                ),
                Return(
                    Some(
                        Identifier(
                            "bar",
                        ),
                    ),
                ),
            ],
        ),
    ),
]
