generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__statement__tests__declaration__module.snap
---
source: generator/javascript/src/transform/statement.rs
expression: ast
---
[
    Variable(
        "foo",
        Closure(
            [
                Variable(
                    "bar",
                    Null,
                ),
                Variable(
                    "fizz",
                    Null,
                ),
                Return(
                    Some(
                        Object(
                            [
                                (
                                    "bar",
                                    Identifier(
                                        "bar",
                                    ),
                                ),
                                (
                                    "fizz",
                                    Identifier(
                                        "fizz",
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
            ],
        ),
    ),
]
